--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3-storage/parse-link-header": "^3.1.0",
     "axios": "^1.5.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.1.9",
     "octokit": "^4.0.2",
+    "parse-link-header": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
